--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_players.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_players.xml
@@ -3316,7 +3316,8 @@
                                             <a id="back" href="/" style="color: white !important"><i class="fa fa-step-backward"></i></a>
                                         </div>
                                     </div>
-                                    <br/>
+                                </h1>
+                                <h1 class="text-2xl font-bold flex items-center justify-center gap-2">
                                     <i class="ph ph-globe-stand text-3xl"></i>
                                     Global Time Converter
                                 </h1>
