--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,7 +946,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.614"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.615"></script>
                     
                     <script t-if="mainnet in ['Testnet OFF2']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -2209,6 +2209,13 @@
                                             <div class="row" style="text-align: left;">
                                                 <div class="col-2"></div>
                                                 <div class="col-10"><a id="checkers" href="/checkers" class="col-10 btn btn-outline-success font-weight-bold text-black border-success checkers" style="border: 2px solid;"><div style=""><i class="fa-solid fa-chess-board"></i></div><div style="font-size:100%;" translate="no">CHECKERS</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="checkersinfo" class="col-auto btn btn-sm btn-outline-info checkersinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
+                                                <div class="col-0"></div>
+                                            </div>
+                                        </li>
+                                        <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-xiangqi" style="">
+                                            <div class="row" style="text-align: left;">
+                                                <div class="col-2"></div>
+                                                <div class="col-10"><a id="xiangqi" href="/xiangqi" class="col-10 btn btn-outline-success font-weight-bold text-black border-success xiangqi" style="border: 2px solid;"><div style=""><i class="fa-solid fa-chess-board"></i></div><div style="font-size:100%;" translate="no">XIANGQI (Chinese chess)</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="xiangqiinfo" class="col-auto btn btn-sm btn-outline-info xiangqiinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                                 <div class="col-0"></div>
                                             </div>
                                         </li>
