--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_xiangqi.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_xiangqi.xml
@@ -373,7 +373,7 @@
                         </div>
                     </div>
 
-                    <div id="game-wrapper">
+                    <div id="game-wrapper" style="max-height: 70%">
                         <div id="game-area">
                             <!-- SVG Board -->
                             <svg id="board-svg" viewBox="0 0 900 1000" preserveAspectRatio="none">
