--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -598,6 +598,8 @@
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Checkers</strong></div>
                                                 <div style="display:inline;"> | </div>
+                                                <div translate="no" style="display:inline;"><strong>Xiangqi (Chinese chess)</strong></div>
+                                                <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Domino</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Latin Crush</strong></div>
@@ -664,6 +666,8 @@
                                             <div translate="no" style="display:inline;"><strong>PingPong</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Checkers</strong></div>
+                                            <div style="display:inline;"> | </div>
+                                            <div translate="no" style="display:inline;"><strong>Xiangqi (Chinese chess)</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Domino</strong></div>
                                             <div style="display:inline;"> | </div>
