--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
@@ -117,6 +117,7 @@
                                         <div style="display: inline">15 Puzzle Game</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">PingPong</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Checkers</div> <div style="display: inline">|</div> 
+                                        <div style="display: inline">Xiangqi (Chinese chess)</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Domino</div> <div style="display: inline">|</div> 
                                         <div style="display: inline">Latin Crush</div>.</h3>
                                     
