--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -622,6 +622,8 @@
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Calendar Converter</strong></div>
                                                 <div style="display:inline;"> | </div>
+                                                <div translate="no" style="display:inline;"><strong>Timezone Converter</strong></div>
+                                                <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Games learning: Chess, Sudoku, Snake</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Odoo Development</strong></div>
@@ -690,6 +692,8 @@
                                             <div translate="no" style="display:inline;"><strong>Calculator</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Calendar Converter</strong></div>
+                                            <div style="display:inline;"> | </div>
+                                            <div translate="no" style="display:inline;"><strong>Timezone Converter</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Games learning: Chess, Sudoku, Snake</strong></div>
                                             <div style="display:inline;"> | </div>
