--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
@@ -100,6 +100,8 @@
                                     
                                     <h3>Calendar: Gregorian to Mayan calendar converter.</h3>
                                     
+                                    <h3>Timezone: Global Timezones converter.</h3>
+                                    
                                     <h3>Games learning: Chess, Sudoku, Snake.</h3>
 
                                     <h3>Odoo: Odoo Learning.</h3>
