--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2821,7 +2821,9 @@
                         </script>
                     </div>
                     
-                    <br/><br/><br/><br/><br/>
+                    <br/><br/><br/><br/><br/><br/><br/><br/>
+                    
+                    <a id="myPayPiABtn" href="/pinetwork" style="color: white" translate="no"><button id="myPayPiBtn"><i class="fa-solid fa-fingerprint"></i></button></a>
                     
                     <a id="myABtn" href="#top" style="color: white" translate="no"><button id="myBtn"><i class="fa-solid fa-arrow-up"></i></button></a>
                     
@@ -2829,7 +2831,6 @@
                         /*Floating Back-To-Top Button*/
                             #myBtn {
                                 position: fixed;
-                                bottom: 10px;
                                 float: right;
                                 right: 10%;
                                 bottom: 10%;
@@ -2847,6 +2848,29 @@
                             }
                         /*On Hover Color Change*/
                             #myBtn:hover {
+                                background-color: #7dbbf1;
+                            }
+                        
+                        /*Floating Back-To-Top Button*/
+                            #myPayPiBtn {
+                                position: fixed;
+                                float: right;
+                                right: 10%;
+                                bottom: 20%;
+                                max-width: 50px;
+                                max-height: 50px;
+                                width: 100%;
+                                height: 100%;
+                                font-size: 18px;
+                                border-color: rgba(85, 85, 85, 0.2);
+                                background-color: rgb(100,100,100);
+                                /*padding: 10px;*/
+                                border-radius: 4px;
+                                opacity: 0.5;
+                                z-index:100;
+                            }
+                        /*On Hover Color Change*/
+                            #myPayPiBtn:hover {
                                 background-color: #7dbbf1;
                             }
                     </style>
