--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2851,7 +2851,7 @@
                                 background-color: #7dbbf1;
                             }
                         
-                        /*Floating Back-To-Top Button*/
+                        /*Floating PayPi Button*/
                             #myPayPiBtn {
                                 position: fixed;
                                 float: right;
