--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -365,6 +365,8 @@
                         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
                         <meta name="viewport" content="width=device-width, user-scalable=yes"/>
                         
+                        <link href="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg" rel="shortcut icon" />
+                        
                         <!-- ios support -->
                         <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
                         <meta name="theme-color" content="#db4938" />
