--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -369,6 +369,8 @@
                         <meta property="og:description" content="Reading Club"/>
                         <meta property="og:image" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
                         
+                        <link href="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg" rel="shortcut icon" />
+                        
                         <!-- ios support -->
                         <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
                         <meta name="theme-color" content="#db4938" />
