--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -425,9 +425,9 @@
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
                             <br/>
-                            <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon (globally), Iberlibro (Europe) or others around the world.</h3>
+                            <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon (globally), Iberlibro (Europe) or others around the world. There are also courses available.</h3>
                             <br/>
-                            <h3>Udemy courses:</h3>
+                            <h3>Udemy courses (all courses with Certificate of Completion):</h3>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://img-c.udemycdn.com/course/200_H/6505675_3364_4.jpg" width="210px" height="130px" /><br/><strong>Learn how to develop a Pi App (webapp) on the Pi Network</strong> <t t-if="with_links"><br/><a href="/piapps-course/" target="_blank">Udemy course</a></t></h5>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://img-c.udemycdn.com/course/200_H/4538222_ce85_5.jpg" width="210px" height="130px" /><br/><strong>Odoo 14 Technical Training en Español</strong> <t t-if="with_links"><br/><a href="/odoo-tech-course/" target="_blank">Udemy course</a></t></h5>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://img-c.udemycdn.com/course/200_H/6522069_77ba.jpg" width="210px" height="130px" /><br/><strong>Aprende Inglés práctico hoy mismo (con IA)</strong> <t t-if="with_links"><br/><a href="/english-course/" target="_blank">Udemy course</a></t></h5>
