--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -374,6 +374,8 @@
                         
                         <meta name="thumbnail" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>-->
                         
+                        <meta name="thumbnail" content="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg"/>
+                        
                         <!-- ios support -->
                         <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
                         <meta name="theme-color" content="#db4938" />
